--- a/src/pages/HomePage/HomeVideo/HomeVideo.scss
+++ b/src/pages/HomePage/HomeVideo/HomeVideo.scss
@@ -9,14 +9,13 @@
     width: 100%;
   }
 
-  .video_overlay_text {
+  .video_overlay {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     background-color: rgba($black, 0.8);
     color: $white;
-    // text-shadow: 2px 2px $black;
     text-align: center;
     font-weight: bold;
     display: flex;
@@ -46,7 +45,7 @@
     position: relative;
     top: $navbar_height;
 
-    .video_overlay_text {
+    .video_overlay {
       height: 100%;
       .title { font-size: $text_md; }
       .subtitle { font-size: $text_tn; }
@@ -57,9 +56,8 @@
 // Large screens
 @media (min-width: $bpoint_md) {
   .home_video {
-    position: fixed;
+    position: relative;
     top: $navbar_height;
-    left: 0;
     z-index: 0;
     width: 100%;
 
@@ -68,7 +66,7 @@
       object-fit: cover;
     }
 
-    .video_overlay_text {
+    .video_overlay {
       height: $video_height;
       .title { font-size: $text_hg; }
       .subtitle { font-size: $text_sm; }
